# View-Aware-Graph

./: .editorconfig  .env.example  .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.toml
docs/en/: CLI_WORKFLOW.md  CODEX_UBUNTU_HANDOFF.md  CONVENTIONS.md  EXAMPLE_INPUTS.md  EXPECTED_GRAPH_SKETCH_SMARTCITYLAB_LOBBY_GT.md  PROMPT_TRIAL_CHECKLIST.md  SCHEMA_NOTES.md  TODO.md  UBUNTU_2204_SERVER_SETUP.md  VIEW_AWARE_GRAPH_SCHEME.md  VLM_EVALUATION_RUBRIC.md  VLM_INTERFACE.md  VLM_MODEL_CANDIDATES.md
examples/outputs/: smartcitylab_lobby_gt_minimal.json
prompts/: view_graph_extraction.md
schemas/: view_aware_graph.schema.json
src/view_aware_graph/: __init__.py  __main__.py  cli.py
src/view_aware_graph/graph/: __init__.py  parsing.py  repair.py  validation.py  visualization.py
src/view_aware_graph/ingestion/: __init__.py
src/view_aware_graph/io/: __init__.py
src/view_aware_graph/vlm/: __init__.py  adapter.py  config.py  ollama.py  types.py
tests/: test_cli.py  test_graph_parsing.py  test_graph_repair.py  test_graph_validation.py  test_graph_visualization.py  test_ollama_adapter.py  test_vlm_config.py  test_vlm_failure.py  test_vlm_types.py
